fixing layout issues

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 }
 
 .content {
-	padding: 10px 0;
+	padding: 10px;
 	width: 80%;
 		float: right;
 }
